--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "test-quasar-cli",
   "version": "0.0.1",
   "description": "A Quasar Framework app",
-  "productName": "Quasar App",
+  "productName": "Quasar MongoDB Graphql App",
   "cordovaId": "org.cordova.quasar.app",
   "author": "",
   "private": true,
