--- a/package.json
+++ b/package.json
@@ -9,15 +9,10 @@
   "scripts": {
     "lint": "eslint --ext .js,.vue src",
     "test": "echo \"No test specified\" && exit 0",
-    "start": "pm2 start app.js"
+    "start": "pm2 start server.js"
   },
   "dependencies": {
     "@quasar/extras": "^1.0.0",
-    "apollo-cache-inmemory": "^1.6.2",
-    "apollo-client": "^2.6.3",
-    "apollo-link-error": "^1.1.11",
-    "apollo-link-http": "^1.5.15",
-    "axios": "^0.18.1",
     "graphql": "^14.4.2",
     "graphql-tag": "^2.10.1",
     "koa": "^2.7.0",
@@ -28,8 +23,7 @@
     "koa-mount": "^4.0.0",
     "koa-router": "^5.4.2",
     "mongoose": "^5.6.7",
-    "quasar": "^1.0.0",
-    "vue-apollo": "^3.0.0-rc.2"
+    "quasar": "^1.0.0"
   },
   "devDependencies": {
     "@quasar/app": "^1.0.0",
