--- a/Server/package.json
+++ b/Server/package.json
@@ -3,9 +3,21 @@
   "version": "1.0.0",
   "description": "",
   "main": "server.js",
+  "author": "",
+  "license": "ISC",
   "scripts": {
     "start": "node server.js"
   },
-  "author": "",
-  "license": "ISC"
+  "dependencies": {
+    "graphql": "^14.4.2",
+    "graphql-tag": "^2.10.1",
+    "koa": "^2.7.0",
+    "koa-bodyparser": "^4.2.1",
+    "koa-graphql": "^0.8.0",
+    "koa-json": "^2.0.2",
+    "koa-logger": "^3.2.1",
+    "koa-mount": "^4.0.0",
+    "koa-router": "^5.4.2",
+    "mongoose": "^5.6.7"
+  }
 }
